--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,6 +13,7 @@ hr {
 
 .navbar {
     min-height: 5rem;
+    background: cornflowerblue;
 }
 
 .button.is-primary {
@@ -26,7 +27,6 @@ hr {
 /* supported currencies */
 .image {
     transition: all .2s ease-in-out;
-
 }
 
 .image :hover {
@@ -85,7 +85,7 @@ hr {
     flex-direction: row;
     -webkit-box-pack: start;
     justify-content: flex-start;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
 .blocklist-item {
@@ -118,24 +118,6 @@ hr {
 
 .icon-padding-right {
     margin-right: 0.5rem;
-}
-
-/* Hero styles */
-
-.hero {
-    background: url(japan.gif);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.hero .title {
-    color: rgb(255, 255, 255);
-    text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
-}
-
-.hero .input {
-    width: 400px;
 }
 
 /* Featured styles */
@@ -227,32 +209,6 @@ hr {
     }
 }
 
-
-.lastBullet {
-    -webkit-animation: am-pulsating 1s ease-out infinite;
-    animation: am-pulsating 1s ease-out infinite;
-}
-@-webkit-keyframes am-pulsating {
-    0% {
-        stroke-opacity: 1;
-        stroke-width: 0px;
-    }
-    100% {
-        stroke-opacity: 0;
-        stroke-width: 50px;
-    }
-}
-@keyframes am-pulsating {
-    0% {
-        stroke-opacity: 1;
-        stroke-width: 0px;
-    }
-    100% {
-        stroke-opacity: 0;
-        stroke-width: 50px;
-    }
-}
-
 .amcharts-graph-column-front {
     -webkit-transition: all .3s .3s ease-out;
     transition: all .3s .3s ease-out;
@@ -288,4 +244,14 @@ hr {
     100% {
         stroke-dashoffset: 0%;
     }
+}
+
+body{
+    background-color: #0f0f00;
+    background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+    /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+}
+
+.is-5 {
+    color: aliceblue;
 }
